--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="theme-toggle">
+        <button id="theme-toggle-btn">Toggle Theme</button>
+    </div>
     <div class="calculator">
         <div class="display" id="display">0</div>
         <div class="buttons">
@@ -33,4 +36,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
